--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,12 +4,10 @@ workflows:
     max_build_duration: 60
     environment:
       flutter: stable
-      android:
-        image: default
     scripts:
       - name: Install dependencies
         script: |
-          flutter packages get
+          flutter pub get
       - name: Build APK
         script: |
           flutter build apk --release
